实现将固件下载到外部flash，然后从外部flash加在固件到内部flash，实现固件升级

--- a/Projects/MDK-ARM/stm32f1_bootloader.uvprojx
+++ b/Projects/MDK-ARM/stm32f1_bootloader.uvprojx
@@ -409,6 +409,11 @@
               <FileType>1</FileType>
               <FilePath>..\..\User\stm32f1xx_it.c</FilePath>
             </File>
+            <File>
+              <FileName>boot.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\User\boot.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
